[workspace]
resolver = "2"
members = [
    "challenges/ccwc"
]

[workspace.package]
version = "0.0.0"
rust-version = "1.74"
edition = "2021"
publish = false

[workspace.lints.rust]
unreachable_pub = "warn"
unsafe_code = "warn"
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
panic_in_result_fn = "warn"
pedantic = "warn"
unwrap_used = "warn"
enum_variant_names = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[workspace.dependencies]
clap = { version = "4.4.11", features = ["derive"] }

[profile.release]
strip = true