[workspace]
resolver = "2"
members = [
    "challenges/ccwc"
]

[workspace.package]
version = "0.0.0"
rust-version = "1.74"
edition = "2021"
publish = false

[workspace.lints.rust]
unreachable_pub = "warn"
unsafe_code = "warn"

[workspace.lints.clippy]
panic_in_result_fn = "warn"
pedantic = "warn"
unwrap_used = "warn"
enum_variant_names = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[workspace.dependencies]
clap = { version = "4.4.11", features = ["derive"] }
assert_cmd = "2.0.12"
predicates = "3.0.4"

[profile.release]
strip = true