[package]
name = "ccwc"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
clap = { workspace = true }

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true

[[bin]]
name = "ccwc"
path = "src/main.rs"

[lints]
workspace = true
